fixed body text wrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,6 +92,7 @@ body {
   justify-items: center;
   flex-grow: 1;
   height: fit-content;
+  width: 15vw;
   margin-top: 32px;
   padding-left: 8px;
   padding-right: 32px;
@@ -102,12 +103,14 @@ body {
   flex-direction: column;
   height: fit-content;
   margin-top: 24px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
   align-content: center;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
-  width: 464px;
+  width: 100%;
   height: 80vh;
 }
 
@@ -205,7 +208,7 @@ a:hover {
   background-size: cover;
   display: flex;
   justify-content: space-around;
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
@@ -251,11 +254,6 @@ a:hover {
 /* ---------------------- Media Queries -------------------------------  */
 
 /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
-
-/* Portrait and Landscape */
-@media (min-width: 961px) {
-  /* tablet, landscape iPad, lo-res laptops ands desktops */
-}
 @media screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
  
   .navbar {
@@ -522,23 +520,20 @@ a:hover {
     flex-flow: column wrap;
     justify-items: center;
     flex-grow: 1;
+    overflow-wrap: break-word;
+  word-wrap: break-word;
     height: 110vh;
     margin-left: -23px;
-    width: 100vw;
-  }
-
-
-  .app {
-    /* width: 100vw; */
   }
 
   #container {
-    max-width: 100vw;
+    height: 1000px;
   }
 
   .right_content {
     height: 100vh;
     max-width: 100vw;
+    
     overflow-x: hidden;
   }
 
